conv-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: conv-api-container
          image: antonlarichev/conv-api:1.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: uploads
              mountPath: /opt/app/uploads
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: conv-api-pvc
