conv-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: conv-app
  labels:
    app: conv-app
spec:
  containers:
  - name: conv-app
    image: antonlarichev/conv-app:1.2
    ports:
    - containerPort: 80
