converter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-deployment
  labels:
    app: converter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter
  template:
    metadata:
      labels:
        app: converter
    spec:
      containers:
        - name: converter-container
          image: antonlarichev/conv-service:1.0
          volumeMounts:
            - name: uploads
              mountPath: /opt/app/uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: conv-api-pvc
