api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 3000      # ← API порт!
      targetPort: 3000
