app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-service
  labels:
    app: conv-app
spec:
  type: ClusterIP
  selector:
    app: conv-app
  ports:
    - name: http
      port: 80   
      targetPort: 80
