conv-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-app-service
spec:
  type: NodePort
  selector:
    app: conv-app 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
