converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter-service
spec:
  type: ClusterIP
  selector:
    app: converter
  ports:
    - name: http
      port: 8080
      targetPort: 8080
